--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
      <p id="description">Thank you for taking the time to help us improve the institution</p>
   </article>
   <form id="survey-form">
-    <label for="name">Name</label>
+    <label for="name" id="name-label">Name</label>
     <br>
-    <input id="name" name="name" type="text" placeholder="Enter your name">
-    <br>
-    <br>
-    <label for="email">Email</label>
-    <br>
-    <input id="email" name="email" type="email" placeholder="Enter your Email">
+    <input id="name" name="name" type="text" placeholder="Enter your name" required>
     <br>
     <br>
-    <label for="number">Age(optional)</label>
+    <label for="email" id="email-label">Email</label>
     <br>
-    <input id="number" name="number" type="number" placeholder="Age">
+    <input id="email" name="email" type="email" placeholder="Enter your Email" required>
+    <br>
+    <br>
+    <label for="number" id="number-label">Age(optional)</label>
+    <br>
+    <input id="number" name="number" type="number" placeholder="Age" min="1" max="100">
     <br>
     <br>
     <label for="dropdown">When was the last time you were in our restaurant?</label>
@@ -40,11 +40,11 @@
       <br>
       <label>Would you recommend restaurant to a friend?</label>
       <br>
-      <input name="recomendation" type="radio" checked> Definitely
+      <input name="recomendation" type="radio" value="Definitely" checked> Definitely
       <br>
-      <input name="recomendation" type="radio"> Maybe
+      <input name="recomendation" type="radio" value="Maybe"> Maybe
       <br>
-      <input name="recomendation" type="radio"> Not sure
+      <input name="recomendation" type="radio" value="Not sure"> Not sure
       <br>
       <br>
       <label>What is your favorite feature of restaurant?</label>
@@ -55,6 +55,25 @@
         <option>Atmosphere</option>
         <option>Music</option>
       </select>
+      <br>
+      <br>
+      <label>What would you like to see improved? (Check all that apply)</label>
+      <br>
+      <input type="checkbox" name="improve" value="Service"> Service
+      <br>
+      <input type="checkbox" name="improve" value="Menu"> Menu
+      <br>
+      <input type="checkbox" name="improve" value="Staff"> Staff
+      <br>
+      <input type="checkbox" name="improve" value="Interior"> Interior
+      <br>
+      <br>
+      <label>Any comments or suggestions?</label>
+      <br>
+      <textarea placeholder="Enter your comment here..."></textarea>
+      <br>
+      <input type="submit" value="Submit" id="submit">  
+      
 
   </form>
 </main>
