--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css"
+  <title></title>
 </head>
 <body>
   <main>
-  <article>
+  <header class="header">
     <h1 id="title">Restaurant Survey Form</h1>
-     <p id="description">Thank you for taking the time to help us improve the institution</p>
-  </article>
+     <p id="description"><i>Thank you for taking the time to help us improve the institution</i></p>
+  </header>
   <form id="survey-form">
     <label for="name" id="name-label">Name</label>
     <br>
-    <input id="name" name="name" type="text" placeholder="Enter your name" required>
+    <input class="field"  id="name" name="name" type="text" placeholder="Enter your name" required>
     <br>
     <br>
     <label for="email" id="email-label">Email</label>
     <br>
-    <input id="email" name="email" type="email" placeholder="Enter your Email" required>
+    <input  class="field" id="email" name="email" type="email" placeholder="Enter your Email" required>
     <br>
     <br>
     <label for="number" id="number-label">Age(optional)</label>
     <br>
-    <input id="number" name="number" type="number" placeholder="Age" min="1" max="100">
+    <input class="field"  id="number" name="number" type="number" placeholder="Age" min="1" max="100">
     <br>
     <br>
     <label for="dropdown">When was the last time you were in our restaurant?</label>
     <br>
-    <select id="dropdown" name="visit" type="select" placeholder="Select an option">
+    <select  class="field" id="dropdown" name="visit" type="select" placeholder="Select an option">
       <option>Last week</option>
       <option>Last month</option>
       <option>This year</option>
@@ -40,16 +41,16 @@
       <br>
       <label>Would you recommend restaurant to a friend?</label>
       <br>
-      <input name="recomendation" type="radio" value="Definitely" checked> Definitely
+      <input class="radio" name="recomendation" type="radio" value="Definitely" checked> Definitely
       <br>
-      <input name="recomendation" type="radio" value="Maybe"> Maybe
+      <input  class="radio" name="recomendation" type="radio" value="Maybe"> Maybe
       <br>
-      <input name="recomendation" type="radio" value="Not sure"> Not sure
+      <input  class="radio" name="recomendation" type="radio" value="Not sure"> Not sure
       <br>
       <br>
       <label>What is your favorite feature of restaurant?</label>
       <br>
-      <select>
+      <select class="field">
         <option>Food</option>
         <option>Interior</option>
         <option>Atmosphere</option>
@@ -59,18 +60,19 @@
       <br>
       <label>What would you like to see improved? (Check all that apply)</label>
       <br>
-      <input type="checkbox" name="improve" value="Service"> Service
+      <input class="check" type="checkbox" name="improve" value="Service"> Service
       <br>
-      <input type="checkbox" name="improve" value="Menu"> Menu
+      <input class="check" type="checkbox" name="improve" value="Menu"> Menu
       <br>
-      <input type="checkbox" name="improve" value="Staff"> Staff
+      <input class="check" type="checkbox" name="improve" value="Staff"> Staff
       <br>
-      <input type="checkbox" name="improve" value="Interior"> Interior
+      <input class="check" type="checkbox" name="improve" value="Interior"> Interior
       <br>
       <br>
       <label>Any comments or suggestions?</label>
       <br>
       <textarea placeholder="Enter your comment here..."></textarea>
+      <br>
       <br>
       <input type="submit" value="Submit" id="submit">  
       
